compiler/testData/loadJava/kotlinSignature/error/SyntaxErrorInFieldAnnotation.kt
package test

import java.util.*

public open class SyntaxErrorInFieldAnnotation : Object() {
    public var foo : String? = ""
}